# ffe-rust

./: Cargo.toml  README.md  cache.json  cache_empty.json  cache_nantes.json  reachable_events.json
on-prem-ors/: docker-compose.yml
on-prem-ors/ors-docker/config/: bretagne-ors-config.yml  ouest-france-ors-config.yml
on-prem-ors/ors-docker/files/: gen_west.sh
on-prem-ors/ors-docker/files/polyfiles/: Normandie.poly  PaysDeLaLoire.poly
src/: departments.csv  lib.rs  main.rs
src/sdk/: config.rs  departments.rs  events.rs  mod.rs  routing.rs
src/sdk/routing/: cache.rs  error.rs  geocode.rs  mod.rs  provider.rs  route.rs  service.rs
src/sdk/routing/provider/: hybrid.rs  local.rs  mod.rs  remote.rs  types.rs
src/sdk/util/: log.rs  mod.rs  rate_limit.rs
