[package]
name = "ffe-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
anyhow = "1.0"
governor = { version = "0.6.3", features = ["futures"] }
once_cell = "1.21.3"
